--- a/clicky-game/package.json
+++ b/clicky-game/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
+  "homepage": "https://github.com/Aagladstone/firstReactApp",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -24,6 +25,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-"homepage": "https://github.com/Aagladstone/firstReactApp"
+  ]
+
 }
